[package]
name = "rustorrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
bit-set = "0.8.0"
env_logger = "0.11.6"
hex = "0.4.3"
log = "0.4.26"
rand = "0.9.0"
reqwest = "0.12.12"
sha1 = "0.10.6"
size = "0.5.0"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
wiremock = "0.6.3"
