[package]
name = "rustorrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
bit-set = "0.8.0"
env_logger = "0.11.6"
hex = "0.4.3"
log = { version = "0.4.26", features = ["kv"] }
md5 = "0.7.0"
priority-queue = "2.2.1"
rand = "0.9.0"
rangemap = "1.5.1"
reqwest = { version = "0.12.12", features = ["stream"] }
sha1 = "0.10.6"
size = "0.5.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
url = "2.5.4"

[dev-dependencies]
wiremock = "0.6.3"
